fix appearance on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -214,6 +214,7 @@ header p {
 @media (max-width: 768px) {
   .puzzles-grid {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    padding: 0.5rem;
   }
 
   .game-header {
@@ -225,5 +226,14 @@ header p {
   .move-counter {
     align-self: flex-end;
     margin-top: -3.5rem;
+    margin-right: 1rem;
+  }
+
+  .container {
+    padding: 2rem 0rem;
+  }
+
+  .back-button {
+    margin-left: 0.5rem;
   }
 }
